--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
+html, body{
+    height: 100vh;
+}
+
+.btn-primary {
+    display: flex;
+    align-items: center;
+    background-color: hsl(var(--primary));
+    color: white;
+    border: hsl(var(--primary));
+    border-radius: calc(var(--radius) - 2px);
+    height: 2rem;
+    padding: 10px;
+
+    &:hover{
+        background-color: hsl(var(--secondary));
+        cursor: pointer;
+        transition-duration: 150ms;
+    }
+   
+}
+
+:root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+ 
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+ 
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 0% 0%;
+ 
+    --secondary: 291, 100%, 35%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+ 
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+ 
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+ 
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+ 
+    --radius: 0.5rem;
+  }
