--- a/src/app/component/dashboard-cards/dashboard-cards.component.html
+++ b/src/app/component/dashboard-cards/dashboard-cards.component.html
@@ -1,3 +1,29 @@
-<p>
-    
-</p>
+<div class="dashboardHeader">
+    Dashboard
+</div>
+<div class="cardsContainer">
+    <div class="cardContainer rounded-md shadow-md" >
+        <div class="cardHeader">
+            Amount of Tasks
+        </div>
+        <div class="cardContent">
+            {{todos.length}}
+        </div>
+    </div>
+    <div class="cardContainer rounded-md shadow-md" >
+        <div class="cardHeader">
+            Complete Tasks
+        </div>
+        <div class="cardContent">
+            {{todos.length}}
+        </div>
+    </div>
+    <div class="cardContainer rounded-md shadow-md" >
+        <div class="cardHeader">
+            Overdue Tasks
+        </div>
+        <div class="cardContent">
+            {{todos.length}}
+        </div>
+    </div>
+</div>
