--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,5 @@
-
-    <app-dashboard-cards/>
-    <app-todo-list/>
-    <button (click)="addTodo()" class="btn-primary">+ create Todo</button>
+<app-dashboard-cards/>
+<app-board/>
 <ng-template #modalTemplate>
     <div> This is our custom modal content</div>
 </ng-template>
