--- a/src/app/component/board/board.component.html
+++ b/src/app/component/board/board.component.html
@@ -7,8 +7,6 @@
                     <h2 class="columnTitle">To do</h2>
                 <button  (click)="addTodo()" class="btn-primary">+ Create Task</button>
             </div>
-
-        
             <div
               cdkDropList
               #todoList="cdkDropList"
@@ -18,7 +16,7 @@
               id="todo"
               (cdkDropListDropped)="drop($event)">
               @for (item of todos; track item) {
-                <div class="task" cdkDrag>{{item.title}}</div>
+                <div class="task" (click)="openEditor(item)"  cdkDrag>{{item.title}}</div>
               }
             </div>
           </div>
@@ -35,7 +33,7 @@
               id="inProgress"
               (cdkDropListDropped)="drop($event)">
               @for (item of inProgress; track item) {
-                <div class="task" cdkDrag>{{item.title}}</div>
+                <div class="task" (click)="openEditor(item)" cdkDrag>{{item.title}}</div>
               }
             </div>
           </div>
@@ -52,7 +50,7 @@
               id="completed"
               (cdkDropListDropped)="drop($event)">
               @for (item of completed; track item) {
-                <div class="task"  cdkDrag>{{item.title}}</div>
+                <div class="task" (click)="openEditor(item)" cdkDrag>{{item.title}}</div>
               }
             </div>
           </div>
