can updated tasks through modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 
 <div class="wrapper">
 <app-todo-modal *ngIf="modelActive"/>
+<app-todo-edit-modal *ngIf="editModelActive"/>
   <router-outlet />
 </div>
