--- a/src/app/component/dashboard-cards/dashboard-cards.component.html
+++ b/src/app/component/dashboard-cards/dashboard-cards.component.html
@@ -12,18 +12,18 @@
     </div>
     <div class="cardContainer rounded-md shadow-md" >
         <div class="cardHeader">
-            Complete Tasks
+            In Progress
         </div>
         <div class="cardContent">
-            {{completed.length}}
+            {{inProgress.length}}
         </div>
     </div>
     <div class="cardContainer rounded-md shadow-md" >
         <div class="cardHeader">
-            Overdue Tasks
+            Completed
         </div>
         <div class="cardContent">
-            {{inProgress.length}}
+            {{completed.length}}
         </div>
     </div>
 </div>
