--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@ html, body{
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+
 }
 
 html, body, app-root{
